--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
@@ -27,7 +27,4 @@ jobs:
       # - name: Run tests
       #   run: pytest
 
-      - name: Lint code
-        run: |
-          pip install flake8
-          flake8 .
+  # Lint code step removed
