--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,27 +1,23 @@
-name: Deploy Checks
+name: Sync to Hugging Face Hub
 
 on:
   push:
     branches:
       - main
-      - staging
 
 jobs:
-  deploy-checks:
+  sync-to-hub:
     runs-on: ubuntu-latest
-    env:
-      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-      GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          fetch-depth: 0
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: Push to Hub
+        uses: huggingface/hub-sync@v0.5
+        with:
+          repo_type: space
+          repo_id: ${{ secrets.HF_SPACE_ID }}
+          token: ${{ secrets.HF_TOKEN }}
+          force: true
