--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Google Cloud Run
+name: Deploy to Google Cloud
 
 on:
   push:
@@ -6,12 +6,11 @@ on:
       - main
 
 env:
-  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  REGION: 'us-central1' # You can change this to your preferred region
-  SERVICE_NAME: 'mcp-travel-planner-streamlit'
+  GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }} # Your Google Cloud project ID
+  GCP_REGION: 'us-central1' # Choose your preferred region
 
 jobs:
-  deploy:
+  deploy-function:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -23,28 +22,53 @@ jobs:
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
-
-      - name: Configure Docker to use Google Cloud Artifact Registry
-        run: gcloud auth configure-docker ${REGION}-docker.pkg.dev
-
-      - name: Build and Push Docker image
+      - name: Create .env.yaml
         run: |
-          docker build -t ${REGION}-docker.pkg.dev/${PROJECT_ID}/${SERVICE_NAME}/${SERVICE_NAME}:${{ github.sha }} .
-          docker push ${REGION}-docker.pkg.dev/${PROJECT_ID}/${SERVICE_NAME}/${SERVICE_NAME}:${{ github.sha }}
+          echo "GEMINI_API_KEY: '${{ secrets.GEMINI_API_KEY }}'" > .env.yaml
+          echo "GOOGLE_MAPS_API_KEY: '${{ secrets.GOOGLE_MAPS_API_KEY }}'" >> .env.yaml
+
+      - name: Deploy Cloud Function
+        id: 'deploy'
+        uses: 'google-github-actions/deploy-cloud-functions@v2'
+        with:
+          name: 'mcp-travel-planner'
+          runtime: 'python311'
+          entry_point: 'mcp_travel_planner_http'
+          source_dir: './'
+          region: '${{ env.GCP_REGION }}'
+          project_id: '${{ env.GCP_PROJECT_ID }}'
+          env_vars_file: '.env.yaml'
+
+      - name: Get Cloud Function URL
+        id: 'get-url'
+        run: |
+          echo "url=$(gcloud functions describe mcp-travel-planner --project ${{ env.GCP_PROJECT_ID }} --region ${{ env.GCP_REGION }} --format='value(httpsTrigger.url)')" >> $GITHUB_OUTPUT
+
+    outputs:
+      function_url: ${{ steps.get-url.outputs.url }}
+
+  deploy-frontend:
+    needs: deploy-function
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Authenticate to Google Cloud
+        id: 'auth'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
       - name: Deploy to Cloud Run
         id: 'deploy'
         uses: 'google-github-actions/deploy-cloud-run@v2'
         with:
-          service: ${{ env.SERVICE_NAME }}
-          region: ${{ env.REGION }}
-          project_id: ${{ env.PROJECT_ID }}
-          image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${SERVICE_NAME}/${SERVICE_NAME}:${{ github.sha }}
-          env_vars: |
-            GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
-            GOOGLE_MAPS_API_KEY=${{ secrets.GOOGLE_MAPS_API_KEY }}
-          # Add any other necessary Cloud Run configurations here, e.g.,
-          # allow-unauthenticated: true
-          # port: 8501 # Streamlit's default port
+          service: 'mcp-travel-planner-frontend'
+          region: '${{ env.GCP_REGION }}'
+          project_id: '${{ env.GCP_PROJECT_ID }}'
+          source: '.'
+          env_vars:
+            CLOUD_FUNCTION_URL: ${{ needs.deploy-function.outputs.function_url }}
+            GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+            GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
