--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,29 +4,86 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  FUNCTION_NAME: mcp-travel-planner
+  REGION: us-central1
 
 jobs:
-  deploy:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install pytest pytest-cov
+      
+      - name: Run tests
+        run: |
+          pytest tests/ --cov=. --cov-report=xml
+      
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
 
-    - id: 'auth'
-      uses: 'google-github-actions/auth@v2'
-      with:
-        credentials_json: '${{ secrets.GCP_SA_KEY }}'
-
-    - name: 'Deploy Function'
-      uses: 'google-github-actions/deploy-cloud-functions@v1'
-      with:
-        name: 'mcp-travel-planner'
-        runtime: 'python311'
-        entry_point: 'mcp_travel_planner_http'
-        trigger_http: true
-        allow_unauthenticated: true
-        env_vars: |
-          GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY_SECRET }}
-          GOOGLE_MAPS_API_KEY=${{ secrets.GOOGLE_MAPS_API_KEY_SECRET }}
-        region: 'us-central1'
-        source: '.'
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    
+    steps:
+      - uses: actions/checkout@v4
+      
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+      
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+      
+      - name: 'Deploy Function'
+        uses: 'google-github-actions/deploy-cloud-functions@v3'
+        with:
+          name: ${{ env.FUNCTION_NAME }}
+          runtime: 'python311'
+          entry_point: 'mcp_travel_planner_http'
+          source: '.'
+          trigger_http: true
+          allow_unauthenticated: true
+          region: ${{ env.REGION }}
+          env_vars: |
+            GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY_SECRET }}
+            GOOGLE_MAPS_API_KEY=${{ secrets.GOOGLE_MAPS_API_KEY_SECRET }}
+            ENVIRONMENT=production
+          memory: 256Mi
+          timeout: 540s
+          max_instances: 100
+          min_instances: 0
+      
+      - name: 'Test deployed function'
+        run: |
+          FUNCTION_URL=$(gcloud functions describe ${{ env.FUNCTION_NAME }} \
+            --region=${{ env.REGION }} \
+            --format='value(httpsTrigger.url)')
+          
+          curl -f "$FUNCTION_URL/health" || exit 1
+          echo "Function deployed successfully at: $FUNCTION_URL"
+      
+      - name: 'Create deployment notification'
+        if: success()
+        run: |
+          echo "🚀 Deployment successful!"
+          echo "Function URL: $(gcloud functions describe ${{ env.FUNCTION_NAME }} --region=${{ env.REGION }} --format='value(httpsTrigger.url)')"
